<resources>
    <string name="app_name">Handy</string>
    <string name="welcome">Welcome</string>
    <string name="login">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up_prompt">Are you new here?</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="guest_continue"><u>Continue as guest</u></string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="i_am">I am:</string>
    <string name="buyer">BUYER</string>
    <string name="handyman">HANDYMAN</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="done">DONE</string>
    <string name="a_bit_longer">Just a bit longer…</string>
    <string name="last_step">Last step</string>
    <string name="years_experience">Experience</string>
    <string name="skills">Skills</string>
    <string name="plumbing">Plumbing</string>
    <string name="electrical_installations">Electrical installations</string>
    <string name="furniture_assemblly">Furniture assembly</string>
    <string name="a_c">Air conditioning</string>
    <string name="painting">Interior painting</string>
    <string name="title_activity_buyer_main">Handy</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_handyman_main">Handy</string>
    <string name="log_out">Log out</string>
    <string name="search">SEARCH</string>
    <string name="history">HISTORY</string>
    <string name="active">Active</string>
    <string name="closed">Closed</string>
    <string name="profile">PROFILE</string>
    <string name="handyman_preview">Handyman preview</string>
    <string name="new_request">New request</string>
    <string name="request_preview">Request Preview</string>
    <string name="requests">REQUESTS</string>
    <string name="map">MAP</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="name">Name</string>
    <string name="rating">Rating</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="sent">Sent</string>
    <string name="accepted">Accepted</string>
    <string name="denied">Denied</string>
    <string name="done_status">Done</string>
    <string name="failed">Failed</string>
    <string name="delete">Delete</string>
    <string name="pay">Pay</string>
    <string name="jobs">Jobs</string>
    <string name="reviews">Reviews</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="payment">Payment method</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="job">Job</string>
    <string name="card_info">Credit card information</string>
    <string name="card_number">Card number</string>
    <string name="expiration_date">Expiration date</string>
    <string name="cvv">CVV</string>
    <string name="pay_btn">PAY</string>
    <string name="old_pass">Old password</string>
    <string name="new_pass">New password</string>
    <string name="client">Client</string>
    <string name="search_by">Search by:</string>
    <string name="distance">Distance in km</string>
    <string name="payment_method">Payment\nmethod</string>
    <string name="urgency">Urgency</string>
    <string name="rate">Rate</string>
    <string name="review">Review</string>
    <string name="title_activity_bottom_navigation_main">BottomNavigationMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="price">Price</string>
    <string name="empty"></string>
    <string name="enter_phone">Enter phone number</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="enter_name">Enter full name</string>
    <string name="leave_review">Leave a review</string>
    <string name="enter_card_number">Enter credit card number</string>
    <string name="enter_expiration_date">Enter expiration date</string>
    <string name="enter_cvv">Enter CVV</string>
    <string name="handyman_lc">Handyman</string>
    <string name="title_activity_handyman_preview">HandymanPreviewActivity</string>
    <string name="enter_date">Enter date</string>
    <string name="add">ADD</string>
    <string name="title_activity_maps">Map</string>

    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>

</resources>
