<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.registration.RegistrationSecondStep">

    <data>

        <variable
            name="vm"
            type="com.example.ve183011m.pki_ve183011m.presentation.registration.RegistrationVM" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/second_step"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/a_bit_longer"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_wrapper"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="70dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/phone_number"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:singleLine="true"
                android:text="@={vm.telephone}" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/address_wrapper"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/address"
                android:imeOptions="actionDone"
                android:inputType="textPostalAddress"
                android:singleLine="true"
                android:text="@={vm.address}" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:text="@string/i_am"
            android:textColor="@color/colorText" />

        <RadioGroup
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checked="@={vm.isBuyer}"
                android:layout_marginTop="10dp"
                android:text="@string/buyer"
                android:textColor="@color/colorText"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/handyman"
                android:textColor="@color/colorText" />

        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"
                android:background="@color/colorAccent"
                android:text="@string/back"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:background="@color/colorAccent"
                android:text="@{vm.isBuyer ? @string/done : @string/next}"
                android:textColor="@color/colorPrimary"/>

        </RelativeLayout>

    </LinearLayout>
    </ScrollView>
</layout>