<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/review_preview_vertical_margin">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginStart="20dp"
            android:layout_weight="1.5"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/payment_method"
            android:textAlignment="textEnd"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="3">

            <RadioGroup
                android:id="@+id/rb_payment_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/cash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cash"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card"/>

            </RadioGroup>

        </FrameLayout>

    </LinearLayout>

</layout>