<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".presentation.buyer.BuyerMainActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:title="@string/app_name" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.design.widget.TabItem
                android:id="@+id/tab_search_handymen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="@string/handyman"
                android:text="@string/handyman" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_requests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="@string/requests"
                android:text="@string/requests" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="@string/profile"
                android:text="@string/profile" />

        </android.support.design.widget.TabLayout>

        <LinearLayout
            android:id="@+id/holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v4.view.ViewPager
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9" />

            <android.support.design.widget.BottomNavigationView
                android:id="@+id/bottom_requests_navigation"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:background="?android:attr/windowBackground"
                android:visibility="gone"
                app:menu="@menu/bottom_navigation" />

        </LinearLayout>

    </LinearLayout>

</layout>